tests/ui/feature-gates/feature-gate-extern-item-impls.stderr
error[E0658]: use of unstable library feature `extern_item_impls`
  --> $DIR/feature-gate-extern-item-impls.rs:3:3
   |
LL | #[eii]
   |   ^^^
   |
   = note: see issue #125418 <https://github.com/rust-lang/rust/issues/125418> for more information
   = help: add `#![feature(extern_item_impls)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
